# smooth-trajectory

./: CMakeLists.txt  README.md  package.xml  prac
msg/: Positions.msg
src/: path_planner.cpp  path_smoother.cpp
